Wed Mar 31 18:21:21 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc: Undo March 30 change.

	* htdig/Retriever.cc: Use excludes.hasPattern before using the
	exclude list. (More elegant solution to problem, as pointed out by
	Gilles.) 

	* htsearch/Display.cc: Remove code setting URLimage to a bogus
	pattern. Instead, check that URLimage.hasPattern() before using
	it.
	
Wed Mar 31 15:16:36 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Synonym.cc: Fix previous fix of minor memory leak.
	(db pointer wasn't properly set)

Tue Mar 30 20:08:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc: If exclude_urls attribute is set to empty, set
	it to something that will never match a URL to ensure nothing is
	excluded.

	* Makefile.config.in: Fix typo leading to HTLIBS referring to itself.

Mon Mar 29 16:47:48 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(excerpt): Added patch from Gabriele to
	improve display of excerpts--show top of description always,
	otherwise try to find the excerpt.

Mon Mar 29 15:57:06 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc: Rename main.cc for consistency with other 
	directories.

	* htdig/Makefile.in: Use it.

Mon Mar 29 12:53:17 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/HtWordType.h (HtIsWordChar): Avoid matching 0 when using
	strchr.
	(HtIsStrictWordChar): Ditto.  (Patch from Hans-Peter Nilsson)

Mon Mar 29 10:51:54 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/regex.h, htlib/regex.c: Include glibc versions of the
	regex functions to override possibly buggy system versions.

	* htlib/Makefile.in: Use them.

	* htfuzzy/EndingsDB.cc: Use glibc regex functions instead of rx
	for massive speedups on non-English affix files. 

	* configure, configure.in: Use the system timegm function if present.
	Don't configure rx since we don't use it any more. Don't worry