@@ -6,7 +6,7 @@
 //
 //
 #if RELEASE
-static char RCSid[] = "$Id: Display.cc,v 1.54.2.7 1999/03/31 23:48:43 ghutchis Exp $";
+static char RCSid[] = "$Id: Display.cc,v 1.54.2.8 1999/04/01 18:11:05 grdetil Exp $";
 #endif
 
 #include "htsearch.h"
@@ -95,6 +95,8 @@ Display::display(int pageNumber)
     int			numberDisplayed = 0;
     ResultMatch		*match = 0;
     int			number = config.Value("matches_per_page");
+    if (number <= 0)
+	number = 10;
     int			startAt = (pageNumber - 1) * number;
 
     if (config.Boolean("logging"))
@@ -363,6 +365,8 @@ Display::setVariables(int pageNumber, List *matches)
 	nMatches = matches->Count();
 	
     int		matchesPerPage = config.Value("matches_per_page");
+    if (matchesPerPage <= 0)
+	matchesPerPage = 10;
     int		nPages = (nMatches + matchesPerPage - 1) / matchesPerPage;
 
     if (nPages < 1)
@@ -456,7 +460,7 @@ Display::setVariables(int pageNumber, List *matches)
     //
     // If a paged output is required, set the appropriate variables
     //
-    if (nMatches > config.Value("matches_per_page"))
+    if (nPages > 1)
     {
 	if (pageNumber > 1)
 	{
